# Tobii-Game-Box

./: README.md
code/: CMakeLists.txt  TobiiWorkspace.sln  Tobii_code.vcxproj  Tobii_code.vcxproj.filters  premake5.lua
code/include/SDL/: SDL_image.h
code/include/spdlog/: async.h  common.h  logger.h  spdlog.h  tweakme.h  version.h
code/include/spdlog/details/: async_logger_impl.h  fmt_helper.h  log_msg.h  logger_impl.h  os.h  pattern_formatter.h  periodic_worker.h  registry.h  thread_pool.h
code/include/spdlog/fmt/: bin_to_hex.h
code/include/spdlog/sinks/: android_sink.h  ansicolor_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  stdout_color_sinks.h  stdout_sinks.h  syslog_sink.h  wincolor_sink.h
code/include/tobii/: tobii.h  tobii_streams.h  tobii_wearable.h
code/ressources/: config.ini
code/src/: Application.cpp  Application.h  Button.cpp  Button.h  Config.cpp  Config.h  Constants.h  Cursor.cpp  Cursor.h  CursorMovementManager.cpp  CursorMovementManager.h  Frame.h  FrameCounter.cpp  FrameCounter.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GazeObject.cpp  GazeObject.h  InputDefinition.h  InputManager.cpp  InputManager.h  Label.cpp  Label.h  Leaderboard.cpp  Leaderboard.h  Menu.cpp  Menu.h  MouseCursor.cpp  MouseCursor.h  MusicManager.cpp  MusicManager.h  Settings.cpp  Settings.h  Statistics.cpp  Statistics.h  StatisticsManager.cpp  StatisticsManager.h  SubMenu.cpp  (+13 more)
code/src/game/remember/: Case.cpp  Case.h  RememberGame.cpp  RememberGame.h
documentation/: Diagrams.asta
documentation/rapport-latex/: biblio.bib  rapport_projet.tex
documentation/rapport-latex/polytech/: .gitignore  .gitlab-ci.yml  citingdoc.sty  constants.sty  firstlastpage.sty  floats.sty  glossaries.sty  listings.sty  polytech.cls  poster.sty  sectionning.sty  setversion.sh  warning.sty  weeklyreports.sty
release/ressources/: config.ini
(+30 files in other folders)
